update generate class, first draft of the wrapper